@@ -4,6 +4,7 @@ New features:
 
 Bug fixes:
 ..F....... [ZBX-16153] fix 500 Internal Server Error when trying to preview pie/exploded graph without items (rlataria)
+..F....... [ZBX-16204] fix undefined offset in CControllerWidgetProblemHostsView (rlataria)
 
 --------------------------------------------------------------------------------
 Changes for 4.2.4
